<resources>
    <string name="app_name">采购精灵</string>
    <string name="loading">正在加载中...</string>
    <string name="load_failed">加载失败，请点我重试</string>
    <string name="load_end">没有更多数据</string>
    <string name="drawer_btn_rss">频道管理</string>
    <string name="subscribe_my_category">我的频道</string>
    <string name="subscribe_txt2">点击进入频道</string>
    <string name="subscribe_txt3">点击添加频道</string>
    <string name="subscribe_more_category">更多频道</string>
    <string name="subscribe_manager_category_info">单击增删频道</string>
    <string name="subscribe_manager_category_info_2">单击增删频道，长按拖拽排序</string>
    <string name="search_text">搜索记录</string>
    <string name="search_ranking">热门搜索</string>

    <string name="mine_dongtai">动态</string>
    <string name="mine_yantao">研讨</string>
    <string name="mine_guanzhu">关注</string>
    <string name="mine_tuisong">推送历史</string>
    <string name="mine_read">阅读历史</string>
    <string name="mine_fansi">粉丝</string>
    <string name="mine_message">消息通知</string>
    <string name="mine_dingYue">我的订阅</string>
    <string name="mine_renzheng">申请智库号认证</string>
    <string name="mine_college">收藏</string>
    <string name="mine_history">历史</string>
    <string name="mine_kefu">情报客服</string>
    <string name="mine_download">离线下载</string>
    <string name="mine_address">收获地址管理</string>
    <string name="mine_fankui">用户反馈</string>
    <string name="mine_setting">系统设置</string>
    <string name="tab_finish">完成</string>
    <string name="tab_edit">编辑</string>
    <string name="tab_edit2">长按可编辑标签</string>
    <string name="str_sao">扫一扫</string>
    <string name="str_gao">兴趣选择</string>
    <string name="str_ku">智库资源</string>
    <string name="str_net">网址提交</string>
    <string name="str_touxiang">头像</string>
    <string name="str_name">昵称</string>
    <string name="str_jianjie">简介</string>
    <string name="str_hangye">行业</string>
    <string name="str_zhanghao">账号和隐私设置</string>
    <string name="str_huancun">清理缓存</string>
    <string name="str_wifiphoto">仅Wi-Fi网络加载图片</string>
    <string name="str_wifivideo">仅Wi-Fi网络自动播放视频</string>
    <string name="str_tuisong">推送消息</string>
    <string name="str_tuijian">推荐给好友</string>
    <string name="str_fengmian">封面</string>
    <string name="str_pingfen">去评分</string>
    <string name="str_closeLogin">退出登录</string>


    <string name="str_phone">请输入手机号</string>
    <string name="str_password">请输入密码</string>
    <string name="str_sure">确定</string>

    <string name="str_changePas">修改密码</string>
    <string name="str_bindPhone">绑定手机号</string>
    <string name="str_editBindPhone">请输入当前绑定的手机号</string>
    <string name="str_editNewPhone">请输入新的手机号</string>
    <string name="str_editPhone">请输入手机号</string>
    <string name="str_editYanZheng">验证码</string>
    <string name="str_editPassword">请输入新密码（6-18位英文或数字）</string>
    <string name="str_editOldPassword">请输入旧密码</string>
    <string name="str_editPasswordAgain">请确认新密码</string>
    <string name="str_editPassword2">请输入密码</string>
    <string name="str_editPasswordAgain2">请再次输入密码</string>
    <string name="str_feedback">您的反馈意见对我们非常重要！</string>
    <string name="str_data">国家的税收，是国家基本保障。税收的提高需要考虑各个阶层的人群，这样才能使国家稳定发展。</string>
    <string name="str_xieyi">同意《明日情报用户协议》</string>
    <string name="str_kaiqi">开启明日情报</string>
    <string name="str_bindphone">为确保您的账户安全和正常使用，保障您的合法权益，根据《网络安全法》等相关规则，登录账户时请完成手机短信动态验证及其他相关验证要求。感谢您的理解和支持（此号码不用于登录）</string>
    <string name="dy_box_txt">想要看哪方面的内容？</string>
    <string name="dy_box_txt2">输入您想要看的内容的关键词</string>
    <string name="dy_box_txt3">最多不超过10个字</string>
    <string name="dy_box_btn_left">试试效果</string>
    <string name="dy_box_btn_right">添加</string>
    <string name="dy_empty">暂时还没有订阅内容，前去设置吧！</string>
    <string name="dy_dying">设置订阅</string>
    <string name="write">可在\"订阅\"首页查看</string>
    <string name="str1">财政部规范\n性文件</string>
    <string name="str2">地方规章\n办法</string>
    <string name="str3">军队颁布\n法规</string>
    <string name="str4">国家和军队\n联合颁布...</string>
    <string name="str5">其他部委\n文件</string>
    <string name="str6">国家颁布\n法规</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
