<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relative_out"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#50000000"
        >
        <RelativeLayout
            android:id="@+id/relative_in"
            android:layout_width="274dp"
            android:layout_height="267dp"
            android:background="@mipmap/bg_dy_box"
            android:layout_centerInParent="true"
            >
            <TextView
                android:id="@+id/tv_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dy_box_txt"
                android:textColor="@color/txt_color_day"
                android:textSize="@dimen/txt_size_seventeen"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="84dp"
                />
            <EditText
                android:id="@+id/edit_addDy"
                android:layout_width="216dp"
                android:layout_height="45dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/tv_txt"
                android:layout_marginTop="20dp"
                android:hint="@string/dy_box_txt2"
                android:textSize="@dimen/txt_size_fourteen"
                android:paddingLeft="15dp"
                android:textColor="@color/txt_color_day"
                android:singleLine="true"
                android:paddingRight="15dp"
                android:maxLength="10"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dy_box_txt3"
                android:textColor="@color/text_red"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/edit_addDy"
                />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="30dp"
                    android:layout_centerHorizontal="true"
                    >
                    <Button
                        android:id="@+id/btn_show"
                        android:layout_width="104dp"
                        android:layout_height="30dp"
                        android:text="@string/dy_box_btn_left"
                        android:background="@drawable/shape_submit"
                        android:textColor="@color/tab_2_day"
                        android:textSize="@dimen/txt_size_fourteen"
                        android:layout_marginRight="18dp"
                        />
                    <Button
                        android:id="@+id/btn_add"
                        android:layout_width="104dp"
                        android:layout_height="30dp"
                        android:text="@string/dy_box_btn_right"
                        android:background="@drawable/shape_login_bt"
                        android:textColor="@color/white"
                        android:textSize="@dimen/txt_size_fourteen"
                        />
                </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>