<?xml version="1.0" encoding="utf-8"?>
<com.ansiyida.cgjl.view.BottomToTopFinishLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000"
    >
   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:background="@color/white"
       >
       <!--<include-->
           <!--android:id="@+id/include"-->
           <!--layout="@layout/layout_top"-->
           <!-- -->
           <!--/>-->

       <ScrollView
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           >

           <LinearLayout
               android:id="@+id/subscribe_main_layout"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               android:paddingBottom="14.0dip" >
               <ImageView
                   android:id="@+id/delete_tab"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@mipmap/frag1_icon_delete"
                   android:layout_gravity="right"
                   android:paddingRight="15dp"
                   android:paddingTop="14dp"
                   android:paddingLeft="14dp"
                   android:paddingBottom="7dp"
                   />
               <RelativeLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="10dip"
                   >

                   <TextView
                       android:id="@+id/my_category_text"
                       style="@style/subscribe_my_tip_text"
                       android:layout_marginLeft="9dp"
                       android:layout_centerVertical="true"
                       android:text="@string/subscribe_my_category" />
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_centerVertical="true"
                       android:text="@string/subscribe_txt2"
                       android:textSize="12sp"
                       android:layout_toRightOf="@id/my_category_text"
                       android:layout_marginLeft="5dp"
                       android:textColor="@color/gray_dan"
                       />

                   <TextView
                       android:id="@+id/finish_text"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/tab_edit"
                       android:textColor="@color/tab_2_day"
                       android:textSize="@dimen/txt_size_thirteen"
                       android:layout_centerVertical="true"
                       android:padding="9dp"
                       android:layout_gravity="right"
                       android:layout_alignParentRight="true"
                       android:layout_marginRight="15dp"

                       />

               </RelativeLayout>

               <View
                   android:id="@+id/seperate_line"
                   style="@style/subscribe_seperate_line"
                   android:visibility="gone"
                   />

               <com.ansiyida.cgjl.tab.DragGrid
                   android:id="@+id/userGridView"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginRight="14dip"
                   android:layout_marginLeft="14dip"
                   android:layout_marginTop="14dp"
                   android:gravity="center"
                   android:horizontalSpacing="14dip"
                   android:listSelector="@android:color/transparent"
                   android:numColumns="4"
                   android:scrollbars="vertical"
                   android:stretchMode="columnWidth"
                   android:verticalSpacing="0.1dp" />

               <View
                   android:id="@+id/seperate_line2"
                   style="@style/subscribe_seperate_line"
                   android:visibility="gone"
                   />

               <RelativeLayout
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   >
                   <TextView
                       android:id="@+id/more_category_text"
                       style="@style/subscribe_more_tip_text"
                       android:layout_marginBottom="14.0dp"
                       android:layout_marginLeft="18dp"
                       android:text="@string/subscribe_more_category"
                       android:textColor="@color/tab_2_day"
                       android:layout_marginTop="12dp"
                       />
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_centerVertical="true"
                       android:text="@string/subscribe_txt3"
                       android:textColor="@color/gray_dan"
                       android:textSize="12sp"
                       android:layout_toRightOf="@id/more_category_text"
                       android:layout_marginLeft="5dp"
                       />
               </RelativeLayout>
               <com.ansiyida.cgjl.tab.OtherGridView
                   android:id="@+id/otherGridView"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="14dip"
                   android:layout_marginRight="14dip"
                   android:gravity="center"
                   android:horizontalSpacing="14dip"
                   android:listSelector="@android:color/transparent"
                   android:numColumns="4"
                   android:scrollbars="vertical"
                   android:stretchMode="columnWidth"
                   android:verticalSpacing="0.1dp"
                   />
           </LinearLayout>
       </ScrollView>
       <ImageView
           android:id="@+id/iv_moveTop"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:src="@mipmap/move_top"
           android:layout_marginTop="467dp"
           android:padding="15dp"
           android:visibility="gone"
           android:layout_centerHorizontal="true"
           />
       <include
           android:id="@+id/category_layout"
           layout="@layout/subscribe_category_item"
           android:visibility="gone" />
   </RelativeLayout>


</com.ansiyida.cgjl.view.BottomToTopFinishLayout>