<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="182dp"
        android:layout_height="115dp"
        android:layout_alignParentRight="true"
        android:background="@mipmap/bg_saoyisao"
        android:orientation="vertical"
        >
        <LinearLayout
            android:id="@+id/linear_sao"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:orientation="horizontal"
            android:layout_marginTop="9dp"
            android:gravity="center_vertical"
            android:visibility="gone"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_sao"
                android:layout_marginLeft="25dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_sao"
                android:textSize="@dimen/txt_size_fifteen"
                android:textColor="@color/back_dark"
                android:layout_marginLeft="15dp"
                />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="9dp"
            android:layout_marginRight="9dp"
            android:visibility="gone"
            android:background="@color/subscribe_item_disabled_bg_day"
            />
        <LinearLayout
            android:id="@+id/linear_interest"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:orientation="horizontal"
            android:layout_marginTop="9dp"
            android:gravity="center_vertical"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_internet"
                android:layout_marginLeft="25dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_gao"
                android:textSize="@dimen/txt_size_fifteen"
                android:textColor="@color/back_dark"
                android:layout_marginLeft="15dp"
                />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="9dp"
            android:layout_marginRight="9dp"
            android:background="@color/subscribe_item_disabled_bg_day"
            />
        <LinearLayout
            android:id="@+id/linear_net"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_net"
                android:layout_marginLeft="25dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_net"
                android:textSize="@dimen/txt_size_fifteen"
                android:textColor="@color/back_dark"
                android:layout_marginLeft="15dp"
                />
        </LinearLayout>


    </LinearLayout>
</RelativeLayout>