<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="312dp"
        android:layout_height="288dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:background="@drawable/shape_zhiku_back">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_bindphone"
        android:textSize="@dimen/txt_size_thirteen"
        android:textColor="@color/back_dark"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginTop="15dp"
            android:background="@color/white"
            >
            <EditText
                android:id="@+id/editText_phone"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:background="@null"
                android:inputType="number"
                android:hint="@string/str_editPhone"
                android:textSize="@dimen/txt_size_fourteen"
                android:paddingLeft="14dp"
                />

        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/subscribe_item_disabled_bg_day"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginTop="1dp"
            android:background="@color/white"
            >
            <EditText
                android:id="@+id/editText_yanZheng"
                android:layout_width="246dp"
                android:layout_height="43dp"
                android:background="@null"
                android:inputType="number"
                android:hint="@string/str_editYanZheng"
                android:textSize="@dimen/txt_size_fourteen"
                android:paddingLeft="14dp"
                />
            <TextView
                android:layout_width="1dp"
                android:layout_height="20dp"
                android:background="@color/subscribe_item_disabled_bg_day"
                android:layout_centerVertical="true"
                android:layout_marginLeft="245dp"
                />
            <TextView
                android:id="@+id/obtain_yanZheng"
                android:layout_width="87dp"
                android:layout_height="29dp"
                android:text="获取验证码"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:layout_alignParentRight="true"
                android:clickable="true"
                android:textSize="@dimen/txt_size_fourteen"
                android:textColor="@color/tab_2_day"
                android:background="@drawable/shape_submit"
                android:layout_marginRight="14dp"
                />
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/subscribe_item_disabled_bg_day"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            />
        <Button
            android:id="@+id/btn_finish"
            android:layout_width="216dp"
            android:layout_height="40dp"
            android:background="@drawable/shape_btn_setting_none"
            android:layout_marginTop="28dp"
            android:layout_gravity="center_horizontal"
            android:text="完成"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_size_seventeen"
            />

    </LinearLayout>
</FrameLayout>