<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg"
    android:orientation="vertical"
    tools:context=".activity.RegisterSecondActivity">
    <include layout="@layout/second_view_top4"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginTop="47dp"
        >
        <EditText
            android:id="@+id/editText_password"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:background="@null"
            android:inputType="textPassword"
            android:hint="@string/str_editPassword2"
            android:textSize="@dimen/txt_size_fourteen"
            android:paddingLeft="20dp"
            android:textColor="@color/white"
            android:textColorHint="#d6e2e9"
            />
        <ImageView
            android:id="@+id/image_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_edit_cancle_white"
            android:layout_alignParentRight="true"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            android:paddingTop="12dp"
            android:layout_centerVertical="true"
            android:paddingBottom="12dp"
            />
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/subscribe_item_disabled_bg_day"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        >
        <EditText
            android:id="@+id/editText_passwordAgain"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:background="@null"
            android:inputType="textPassword"
            android:hint="@string/str_editPasswordAgain2"
            android:textSize="@dimen/txt_size_fourteen"
            android:paddingLeft="20dp"
            android:textColor="@color/white"
            android:textColorHint="#d6e2e9"
            />
        <ImageView
            android:id="@+id/image_clear2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_edit_cancle_white"
            android:layout_alignParentRight="true"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            android:paddingTop="12dp"
            android:layout_centerVertical="true"
            android:paddingBottom="12dp"
            />
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/subscribe_item_disabled_bg_day"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        >
        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:button="@null"
            android:drawableLeft="@drawable/selector_xieyi"
            android:layout_marginLeft="87dp"
            android:text="    同意"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/tv_xieYi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/checkbox"
            android:clickable="true"
            android:text="《明日情报用户协议》"
            android:textColor="#c6d6db"
            android:textSize="@dimen/txt_size_fourteen" />


    </RelativeLayout>
    <Button
        android:id="@+id/btn_finish"
        android:layout_width="288dp"
        android:layout_height="44dp"
        android:background="@drawable/shape_login_bt_none"
        android:layout_marginTop="46dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/str_kaiqi"
        android:textColor="@color/white"
        android:textSize="@dimen/txt_size_seventeen"
        />

</LinearLayout>
