<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/subscribe_item_disabled_bg_day"
    tools:context="com.ansiyida.cgjl.activity.EditActivity">
    <include
        layout="@layout/second_view_top"
        />
    <RelativeLayout
        android:id="@+id/relative_touXiang"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_touxiang"
            android:textColor="@color/txt_color_day"
            android:textSize="@dimen/txt_size_fourteen"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            />
        <ImageView
            android:id="@+id/image_touXiang"
            android:layout_width="39dp"
            android:layout_height="39dp"
            android:src="@mipmap/ic_launcher"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="36dp"

            />
        <ImageView
            android:id="@+id/image_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/point_entry"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/subscribe_item_disabled_bg_day"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/relative_userName"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:background="@color/white"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_name"
            android:textColor="@color/txt_color_day"
            android:textSize="@dimen/txt_size_fourteen"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/point_entry"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/subscribe_item_disabled_bg_day"
            />
        <TextView
            android:id="@+id/text_userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txt_size_twelve"
            android:text="大大的鱼"
            android:textColor="@color/tab_1_day"
            android:maxEms="12"
            android:singleLine="true"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="36dp"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/relative_jianJie"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:background="@color/white"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_jianjie"
            android:textColor="@color/txt_color_day"
            android:textSize="@dimen/txt_size_fourteen"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/point_entry"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            />
        <TextView
            android:id="@+id/text_jianJie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txt_size_twelve"
            android:text="待完善"
            android:textColor="@color/tab_1_day"
            android:maxEms="15"
            android:singleLine="true"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="36dp"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/relative_hangYe"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:visibility="gone"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_hangye"
            android:textColor="@color/txt_color_day"
            android:textSize="@dimen/txt_size_fourteen"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/point_entry"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            />
        <TextView
            android:id="@+id/text_hangYe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txt_size_twelve"
            android:text="待完善"
            android:textColor="@color/tab_1_day"
            android:maxEms="15"
            android:singleLine="true"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="36dp"
            />
    </RelativeLayout>
</LinearLayout>
